# RoboticsCodingChallenge

./: .gitignore  CMakeLists.txt  README.md  k_profile.csv
data/: short.json
include/robot/: area.hpp  curvature.hpp  export.hpp  geometry.hpp  json_loader.hpp  speed_profile.hpp  time_estimator.hpp  types.hpp
src/: area.cpp  curvature.cpp  export.cpp  geometry.cpp  json_loader.cpp  main.cpp  speed_profile.cpp  time_estimator.cpp
tests/: test_area.cpp  test_curvature.cpp  test_geometry.cpp  test_speed.cpp  test_time.cpp
